--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,17 @@ p {
     margin: 0 auto;
 }
 
+.nav-line {
+    display: flex;
+    justify-content: space-between;
+    margin: 5% 5% 5% auto;
+    align-items: flex-end;
+}
+
+.nav-line a {
+    text-decoration: none;
+    color: black;
+}
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -82,7 +93,8 @@ p {
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
+    margin: 3% auto;  
 }
 
 .middle-content {
@@ -143,4 +155,44 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+#box1 {
+    background:teal;
+}
+
+#box2 {
+    background: gold;
+}
+
+#box3 {
+    background: cadetblue;
+}
+
+#box4 {
+    background: coral;
+}
+
+#box5 { 
+    background: crimson;
+}
+
+#box6 {
+    background: forestgreen;
+}
+
+#box7 {
+    background: darkorchid;
+}
+
+#box8 {
+    background: hotpink;
+}
+
+#box9 {
+    background: indigo;
+}
+
+#box10 {
+    background: dodgerblue;
 }
