--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,11 @@ p {
     text-decoration: none;
     color: black;
 }
+
+header {
+    margin-bottom: 3%;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -93,8 +98,12 @@ p {
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;
-    margin: 3% auto;  
+    padding-bottom: 20px;  
+}
+
+#about {
+    width: 100%;
+    margin-left: 1%;
 }
 
 .middle-content {
