--- a/css/index.css
+++ b/css/index.css
@@ -205,3 +205,38 @@ footer nav a {
 #box10 {
     background: dodgerblue;
 }
+
+.about-links {
+    width: 48%;
+    border-bottom: 1px dashed black;
+    padding: 2% 0;
+    margin-bottom: 5%;
+}
+
+.about-links h5 {
+    margin-top: 2%;
+}
+
+#middle-content-about {
+    border: none;
+}
+
+.about-links a {
+    background: white;
+	margin-top: 5%;
+	display: block;
+	width: 35%;
+	border: 2px solid black;
+	text-decoration: none;
+	border-radius: 10px;
+	padding: 3% 4%;
+	font-size: 100%;
+    text-align: center;
+    color: black;
+}
+
+.bottom-content-about {
+    padding-left: 2%;
+    margin-bottom: 5%;
+}
+
